Fix text align for p tags in river

--- a/app/assets/stylesheets/welcome_controller.css.scss
+++ b/app/assets/stylesheets/welcome_controller.css.scss
@@ -7,12 +7,15 @@ body {
 }
 
 .index-river {
-  background-color: #8bc249;
-  border-radius: 2px;
   h6{
     text-align:center;
     color: #ffffff;
   }
+  p {
+    text-align: left;
+  }
+  background-color: #8bc249;
+  border-radius: 2px;
   margin-top: 30px;
   box-shadow: 0px 2px 9px 1px rgba(103,159,66,1);
   padding: 10px 20px;
